--- a/frontend-app/src/app/pages/home/components/ventas/ventas.component.html
+++ b/frontend-app/src/app/pages/home/components/ventas/ventas.component.html
@@ -6,7 +6,7 @@
       <div class="catalog-header">
         <div class="search-bar">
           <ion-searchbar
-            placeholder="Buscar productos..."
+            placeholder="Buscar productos por nombre/sku"
             [(ngModel)]="searchTerm"
             (ionInput)="onSearch($event)"
             mode="ios"
