feat: Implement product management module with UI for listing and forms, product model, and backend service with Prisma schema.

--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.html
@@ -145,8 +145,8 @@
         </ion-item>
       </div>
       <ion-item class="input-item">
-        <ion-label position="stacked">IVA (%)</ion-label>
-        <ion-input type="number" formControlName="iva"></ion-input>
+        <ion-label position="stacked">Margen de Ganancia (%)</ion-label>
+        <ion-input type="number" formControlName="margenGanancia" readonly></ion-input>
       </ion-item>
     </div>
 
