--- a/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.scss
+++ b/frontend-app/src/app/pages/home/components/productos/modulos/productos-form/productos-form.component.scss
@@ -102,3 +102,10 @@
         border: 1px solid rgba(255, 255, 255, 0.5);
     }
 }
+
+.help-text {
+    font-size: 0.75rem;
+    color: var(--ion-color-medium);
+    font-style: italic;
+    margin-top: 4px;
+}
